WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
165836
REGRESSION (
r209776
): [ios-simulator] LayoutTest http/tests/xmlhttprequest/on-network-timeout-error-during-preflight.html is timing out
https://bugs.webkit.org/show_bug.cgi?id=165836
Summary
REGRESSION (r209776): [ios-simulator] LayoutTest http/tests/xmlhttprequest/on...
Ryan Haddad
Reported
2016-12-13 19:50:39 PST
LayoutTest http/tests/xmlhttprequest/on-network-timeout-error-during-preflight.html is timing out
https://build.webkit.org/results/Apple%20iOS%2010%20Simulator%20Release%20WK2%20(Tests)/r209776%20(2382)/results.html
https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=http%2Ftests%2Fxmlhttprequest%2Fon-network-timeout-error-during-preflight.html
Attachments
Patch
(1.71 KB, patch)
2016-12-14 11:39 PST
,
Alex Christensen
beidson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryan Haddad
Comment 1
2016-12-13 19:50:54 PST
May have started with
https://trac.webkit.org/changeset/209776
Alex Christensen
Comment 2
2016-12-14 11:39:26 PST
Created
attachment 297106
[details]
Patch
Alex Christensen
Comment 3
2016-12-14 11:53:49 PST
http://trac.webkit.org/changeset/209819
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug