REGRESSION (r209776): [ios-simulator] LayoutTest http/tests/xmlhttprequest/on-network-timeout-error-during-preflight.html is timing out https://bugs.webkit.org/show_bug.cgi?id=165836

Reviewed by Brady Eidson.

* loader/CrossOriginAccessControl.cpp:
(WebCore::createAccessControlPreflightRequest):
Use the platform default timeout for CORS preflight requests.



Canonical link: https://commits.webkit.org/183464@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209819 268f45cc-cd09-0410-ab3c-d52691b4dbfc